--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-slot": "^1.0.4",
     "@tanstack/react-query": "^5.90.2",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
